<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="spinner" type="id" />
    <item name="progressBar" type="id" />
    <item name="recyclerView" type="id" />
    <item name="away_team" type="id" />
    <item name="away_score" type="id" />
    <item name="home_team" type="id" />
    <item name="home_score" type="id" />
    <item name="date" type="id" />
    <item name="navigation" type="id" />
    <item name="team_name" type="id" />
</resources>